--- a/sass/components/back/_sidebar.scss
+++ b/sass/components/back/_sidebar.scss
@@ -19,7 +19,7 @@ body.back {
 
         .navbar {
             button {
-                height: calc(60px - 1rem - 5px);
+                height: calc(60px - 1rem - 2px);
 
                 i {
                     color: darken($light_green, 10%);;
@@ -31,11 +31,11 @@ body.back {
                 padding-right: 0;
                 min-height: 60px;
                 background-color: #f9f9fe;
-                border-top: 5px solid darken($light_green, 10%);
+                border-top: 2px solid darken($light_green, 10%);
                 box-sizing: border-box;
 
                 .navbar-collapse {
-                    margin-top: calc(60px - 1rem - 5px);
+                    margin-top: calc(60px - 1rem - 2px);
                 }
             }
             
@@ -48,12 +48,16 @@ body.back {
             }
         }
 
-
         a.nav-link {
             padding: 15px 30px;
             color: #8ca3ad;
             font-size: 14px;
             border-left: 2px solid transparent;
+
+            @include phones() {
+                padding-left: 15px;
+                padding-right: 15px;
+            }
 
             &:hover {
                 color: #58707b;
@@ -86,6 +90,11 @@ body.back {
             &.child {
                 padding: 10px 30px;
 
+                @include phones() {
+                    padding-left: 15px;
+                    padding-right: 15px;
+                }
+
                 &.active {
                     background-color: rgba(0, 179, 113, 0.25);
                     border-color: darken($light_green, 10%);
@@ -101,7 +110,13 @@ body.back {
         }
 
         div.collapse {
-            background-color: #f9f9fe;
+            &.show {
+                background-color: #f9f9fe;
+            }
+            
+            @include phones() {
+                background-color: #f9f9fe;
+            }
         }
     }
 }
